docs/7.52/md/abennews-740.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) → 

Changes in Release 7.40 and Its SPs

Release 7.40 is based on [7.0, EhP3 or 7.3, EhP1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703.htm). Therefore, apart from a few enhancements, this release is based almost in full on [7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71.htm). The changes in Release 7.40 are delivered in Support Packages that are coupled with kernel releases.

The following table shows the Support Packages and the associated kernel releases for which there are changes in the ABAP programming language:

Support Package

Kernel Release

[7.40, SP10](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp10.htm)

7.42

[7.40, SP08](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp08.htm)

7.42

[7.40, SP05](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp05.htm)

7.41

[7.40, SP02](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp02.htm)

7.40

Continue
[Changes in Release 7.40, SP10](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp10.htm)
[Changes in Release 7.40, SP08](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp08.htm)
[Changes in Release 7.40, SP05](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp05.htm)
[Changes in Release 7.40, SP02](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-740_sp02.htm)