docs/7.57/md/abennews-740.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 7.40 and its SPs, ABENNEWS-740, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D
%0A%0D%0ASuggestion for improvement:)

News for Release 7.40 and its SPs

[ABAP release](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_release_glosry.htm "Glossary Entry") 7.40 is based on [7.0, EhP3 or 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703.htm). Therefore, apart from a few enhancements, this release is based almost in full on 7.0, [EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71.htm). The changes in Release 7.40 are delivered in support packages that are coupled with kernel releases.

The following table shows the support packages and the associated kernel releases for which there are changes in the ABAP programming language:

Support Package

Kernel Release

[7.40, SP10](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp10.htm)

742

[7.40, SP08](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp08.htm)

742

[7.40, SP05](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp05.htm)

741

[7.40, SP02](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp02.htm)

740

Continue
[News for Release 7.40, SP10](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp10.htm)
[News for Release 7.40, SP08](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp08.htm)
[News for Release 7.40, SP05](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp05.htm)
[News for Release 7.40, SP02](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp02.htm)